glibc (2.3.2.ds1-17) unstable; urgency=high

  * GOTO Masanori <gotom@debian.org>

    - debian/sysdeps/depflags.pl: Fix typo, from "kerberos4th-dev" to
      "kerberos4kth-dev".  (Closes: #266637)
    - debian/patches/00list: add locale-byn_ER.dpatch that was missing
      when I fixed.  (Closes: #270998)


    - debian/local/manpages/tzselect.1: Fix typo.  (Closes: #269747)

 -- GOTO Masanori <gotom@debian.org>  Thu, 19 Aug 2004 12:39:35 +0900

glibc (2.3.2.ds1-16) unstable; urgency=high

  * GOTO Masanori <gotom@debian.org>

    - debian/FAQ: Add note about errno + NPTL workaround.
      (Closes: #261035)
    - debian/patches/glibc232-mips-dl-machine.dpatch: Fix mips/mipsel
      compilation breakage with the recent binutils.  (Closes: #262646)
    - debian/patches/glibc232-m68k-reloc.dpatch: Fix m68k compilation
      breakage with the recent binutils.  (Closes: #263601)

  * Jeff Bailey <jbailey@raspberryginger.com>

    - debian/debhelper.in/libc-dev.install.hurd-i386: Don't install
      getconf.

 -- GOTO Masanori <gotom@debian.org>  Mon,  2 Aug 2004 11:53:54 +0900

glibc (2.3.2.ds1-15) unstable; urgency=high

  * Jeff Bailey <jbailey@raspberryginger.com>

    - debian/sysdeps/depflags.pl: Replace ${libc}, not libc6.
      (Closes: #262669)

    - Marking urgency as high, last upload should have been marked
      this way for RC bug fix.

 -- Jeff Bailey <jbailey@raspberryginger.com>  Sun,  1 Aug 2004 08:50:13 -0400

glibc (2.3.2.ds1-14) unstable; urgency=low

  * GOTO Masanori <gotom@debian.org>

    - debian/patches/glibc232-iconv-ucs2-unalign.dpatch: Add to fix
      iconv unalignment access with UCS-2BE/UCS-2LE on some architectures.
      (Closes: #234691)
    - debian/patches/locale-byn_ER.dpatch: Add to fix byn_ER localedef
      breakage.  Patched by Denis Barbier <barbier@linuxfr.org>.
      (Closes: #246270, #257658)
    - debian/patches/locales-supported.dpatch: Add no_NO.ISO-8859-1 into
      SUPPORTED.  (Closes: #246170)