@@ -195,11 +195,13 @@ then
         exit 1
     fi
 
-    # intel i386 requires a recent kernel
+    # sanity checking for the appropriate kernel on each architecture.
     realarch=`uname -m`
+    kernel_ver=`uname -r`
+
+    # intel i386 requires a recent kernel
     if [ "$realarch" = i386 ]
     then
-	kernel_ver=`uname -r`
 	if dpkg --compare-versions "$kernel_ver" lt 2.4.24
 	then
 	    echo WARNING: This machine has i386 class processor.
@@ -214,15 +216,12 @@ then
     fi
 
     # SPARC sun4m requires a recent kernel
-    realarch=`uname -m`
     if [ "$realarch" = sparc ]
     then
 	cputype=`egrep '^type.*:.*sun4m' /proc/cpuinfo 2> /dev/null` || true
-	kernel_ver=`uname -r`
 
 	if [ "$cputype" != "" ]
 	then
-	    kernel_ver=`uname -r`
 	    if dpkg --compare-versions "$kernel_ver" lt 2.4.21
 	    then
 		echo WARNING: You have a cpu which requires kernel 2.4.21
@@ -253,7 +252,6 @@ then
     # HPPA boxes require latest fixes in the kernel to function properly.
     if [ "$realarch" = parisc ]
     then
-	kernel_ver=`uname -r`
 	if dpkg --compare-versions "$kernel_ver" lt 2.4.17
 	then
 		echo WARNING: This version of glibc requires that you be running
@@ -268,7 +266,6 @@ then
     # Note that parisc64 kernel version scheme is "`uname -r`-64".
     if [ "$realarch" = parisc64 ]
     then
-	kernel_ver=`uname -r`
 	if [ $kernel_ver = ${kernel_ver/pa/} ]
 	then
 	    if dpkg --compare-versions "$kernel_ver" lt 2.4.19-64
@@ -296,13 +293,25 @@ then
 	&& [ "`dpkg --print-installation-architecture`" = mips ]
     then
 	# MIPS (but not mipsel) require a kernel update for the msq fixes.
-	kernel_ver=`uname -r`
 	if dpkg --compare-versions "$kernel_ver" lt 2.4.22
 	then
 		echo WARNING: System V message queues require kernel 2.4.22 to
 		echo work correctly on this architecture.  Some programs
 		echo "(including perl) may not operate correctly."
 		exit 1
+	fi
+    fi
+
+    # amd64 requires 2.6 kernel because we drop to support linuxthreads
+    if [ "$realarch" = x86_64 ] \
+	&& [ "`dpkg --print-installation-architecture`" = amd64 ]
+    then
+	if dpkg --compare-versions "$kernel_ver" lt 2.6.0
+	then
+	    echo WARNING: POSIX threads library NPTL requires 2.6 and
+	    echo later kernel on amd64.  If you use 2.4 kernel, please
+	    echo upgrade your kernel before installing glibc.
+	    exit 1
 	fi
     fi
 fi
